--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
         <testSourceDirectory>src/test/scala</testSourceDirectory>
         <plugins>
             <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <version>3.2.1</version>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.13</version>
@@ -110,6 +115,13 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <!-- TO Define Main Class
+                    <archive>
+                        <manifest>
+                            <mainClass>com.your-package.MainClass</mainClass>
+                        </manifest>
+                    </archive>
+                    -->
                 </configuration>
                 <executions>
                     <execution>
