--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,15 @@
         <sbt.project.name>sql</sbt.project.name>
         <scala.version>2.11.7</scala.version>
         <scala.binary.version>2.11</scala.binary.version>
+        <spark.version>1.6.1</spark.version>
         <jmh.version>1.11.3</jmh.version>
     </properties>
-
+    <repositories>
+        <repository>
+            <id>my</id>
+            <url>file://${project.basedir}/../repo</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -28,12 +34,12 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_${scala.binary.version}</artifactId>
-            <version>${project.version}</version>
+            <version>${spark.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_${scala.binary.version}</artifactId>
-            <version>${project.version}</version>
+            <version>${spark.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
@@ -119,11 +125,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.davidmoten</groupId>
+            <groupId>edu.thu.database</groupId>
             <artifactId>rtree</artifactId>
             <version>0.8-RC8-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/../rtree/target/rtree-0.8-RC8-SNAPSHOT.jar</systemPath>
         </dependency>
 
         <dependency>
