finish partition and index save

--- a/pom.xml
+++ b/pom.xml
@@ -177,7 +177,7 @@
             </extension>
         </extensions>
         <sourceDirectory>src/main/scala</sourceDirectory>
-        <testSourceDirectory>src/test/scala</testSourceDirectory>
+        <!-- testSourceDirectory>src/test/scala</testSourceDirectory -->
         <plugins>
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
